feat : delete 추가

--- a/index.html
+++ b/index.html
@@ -20,20 +20,9 @@
         </div>
 
         <ul class="todo-list">
-            // 완료된 일
-            <li class="todo-item checked">
-                <div class="checkbox">✔</div>
-                <div class="todo">첫번째 할 일</div>
-                <button class="delBtn">x</button>
-            </li>
-            // 완료되지 않은 일
-            <li class="todo-item">
-                <div class="checkbox"></div>
-                <div class="todo">두번째 할 일</div>
-                <button class="delBtn">x</button>
-            </li>
-
+            <!-- 여기에 List가 담긴다 !-->
         </ul>
+
         <div class="todo-bottom">
             <div class="left-items">3 items left</div>
             <div class="button-group">
@@ -47,6 +36,6 @@
     <p class='info'>더블클릭 시 수정 가능!</p>
 
 </div>
-<script src="todo.js" ></script>
+<script src="todo.js"></script>
 </body>
 </html>
