feat : update 기능, click 버튼 , 리팩토링 추

--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
     <p class='info'>더블클릭 시 수정 가능!</p>
 
 </div>
-<script src="todo.js"></script>
+<script src="Todo.js"></script>
 </body>
 </html>
