refactor : 안쓰는 코드 삭제, 이

--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
 </div>
 <script src="Todo.js"></script>
 <script src="TodoEventListener.js"></script>
+<script src="TodoComplete.js"></script>
 </body>
 </html>
