--- a/index.html
+++ b/index.html
@@ -16,13 +16,26 @@
 
         <div class="todo-input-box">
             <button class="complete-all-btn">✔</button>
-            <input type="text" class="todo-inner" placeholder="해야 할 일을 입력해주세요.">
+            <input type="text" class="todo-input" placeholder="해야 할 일을 입력해주세요.">
         </div>
 
         <ul class="todo-list">
-            <!-- 여기에 List가 담긴다 !-->
+            <li class="todo-item checked">
+                <div class="checkbox">✔</div>
+                <div class="todo">첫번째 할 일</div>
+                <button class="delBtn">x</button>
+            </li>
+            <li class="todo-item">
+                <div class="checkbox"></div>
+                <div class="todo">두번째 할 일</div>
+                <button class="delBtn">x</button>
+            </li>
+            <li class="todo-item">
+                <div class="checkbox"></div>
+                <div class="todo">세번째 할 일</div>
+                <button class="delBtn">x</button>
+            </li>
         </ul>
-
         <div class="todo-bottom">
             <div class="left-items">3 items left</div>
             <div class="button-group">
@@ -37,7 +50,7 @@
 
 </div>
 <script src="Todo.js"></script>
-<script src="TodoEventListener.js"></script>
 <script src="TodoComplete.js"></script>
+<script src="TodoEventListener.js"></script>
 </body>
 </html>
