--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 
 </div>
 <script src="Todo.js"></script>
-<script src="TodoComplete.js"></script>
-<script src="TodoEventListener.js"></script>
+<script src="Render.js"></script>
+<script src="EventHandlers.js"></script>
+<script src="Init.js"></script>
 </body>
 </html>
