--- a/index2.html
+++ b/index2.html
@@ -34,9 +34,6 @@
     <p class='info'>더블클릭 시 수정 가능!</p>
 
 </div>
-<script type="module">
-    import { TodoApplication } from './TodoApplication.js';
-    const todoApp = new TodoApplication();
-</script>
+<script src="Test.js" ></script>
 </body>
 </html>
