feat : fragment 테그 추가

--- a/src/1.구구단/Gugudan-class.html
+++ b/src/1.구구단/Gugudan-class.html
@@ -45,7 +45,7 @@
 
         render() {
             return (
-                <div>
+                <React.Fragment>
                     <div>{this.state.first} 곱하기 {this.state.second}는?</div>
                     <form onSubmit={this.onSubmit}>
                         <input type="number" value={this.state.value}
@@ -53,7 +53,7 @@
                         <button>입력!</button>
                     </form>
                     <div>{this.state.result}</div>
-                </div>
+                </React.Fragment>
             );
         }
     }
